--- a/_pugfiles/header.pug
+++ b/_pugfiles/header.pug
@@ -1,2 +1,7 @@
-//- empty pug file 
-h1 hello
+//- section starts with a section tag 
+.flex-parent.off-white
+    .header
+        .logo.light-blue.pl-10
+            h1 A
+        nav.nav.pale-green.pr-10
+            h1 -
