--- a/_pugfiles/hero-1.pug
+++ b/_pugfiles/hero-1.pug
@@ -1,55 +1,20 @@
 
-.hero
-    .hero--left
-    .hero--right
-        .hero--right--content
-            h1.hero--txt--h1 WE ARE BELLATR 
-            .hr-line
+.hero1
+    .hero1--left
+    .hero1--right
+        .hero1--right--content
+            h1.hero1--txt--h1 WE ARE BELLATR 
+            .hero1--hr-line
             p.dark-txt THE AGENCEY THAT WILL MAKE YOU CHANGE 
             p.italic-txt "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim 
 
 
-.hero
-    .hero--left.order-1
-    .hero--right
-        .hero--right--content
-            h1.hero--txt--h1 WE ARE BELLATR 
-            .hr-line
-            p.dark-txt THE AGENCEY THAT WILL MAKE YOU CHANGE 
-            p.italic-txt "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim 
+.hero1
+    .hero1--left.order-1
+    .hero1--right
+        .hero1--right--content
+            h1.hero1--txt--h1 WE ARE BELLATR 
+            .hero1--hr--line
+            p.hero1--dark--txt THE AGENCEY THAT WILL MAKE YOU CHANGE 
+            p.hero1--italic--txt "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim 
     
-.hero
-    .hero--left
-        .hero--left--4x4
-            .hero--img-1
-            .hero--img-2
-            .hero--img-3
-            .hero--img-4
-    .hero--right
-        .hero--right--content
-            h1.hero--txt--h1 WE ARE BELLATR 
-            .hr-line
-            p.dark-txt THE AGENCEY THAT WILL MAKE YOU CHANGE 
-            p.italic-txt "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim 
-    
-
-.hero
-    .hero--left.order-1
-    .hero--right
-        .hero--right--content
-            h1.hero--txt--h1 WE ARE BELLATR 
-            .hr-line
-            p.dark-txt THE AGENCEY THAT WILL MAKE YOU CHANGE 
-            p.italic-txt "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim   
-    
-
-.hero
-    .hero--left
-    .hero--right
-        .hero--right--content
-            h1.hero--txt--h1 WE ARE BELLATR 
-            .hr-line
-            p.dark-txt THE AGENCEY THAT WILL MAKE YOU CHANGE 
-            p.italic-txt "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim 
-
-
