--- a/assets/css/3-includes/_hero-2.scss
+++ b/assets/css/3-includes/_hero-2.scss
@@ -1,17 +1,17 @@
 
 
-.hero1{
+.hero2{
     height: 75vh; 
 }
 
 
 
-.hero1--left{
+.hero2--left{
     background-color: yellow;
     height: 500px;
 }
 
-.hero1--right{
+.hero2--right{
     height: 75%;
     height: 250px;  
     background-color: grey;
@@ -19,7 +19,7 @@
 
 // Centers the content in the middle of the block,
 // Restricts the content to the 75% width 
-.hero1--right--content{
+.hero2--right--content{
     text-align: center;
     height: 100%;
     width: 75%; 
@@ -29,7 +29,7 @@
     justify-content: center;
     align-items: center;  
 }
-.hero1--hr--line{
+.hero2--hr-line{
     width: 25%; 
     border-bottom: 2px solid black;
 }
@@ -40,17 +40,17 @@
  //==============================
 
  @media (min-width: 800px){
-    .hero1{
+    .hero2{
         display: flex;
         flex-direction: collumn;
     }
 
-    .hero1--left{
+    .hero2--left{
         flex-basis: 50%; 
         height: 100%;
     }
 
-    .hero1--right{
+    .hero2--right{
         flex-basis: 50%; 
         height: 100%;
     }
@@ -64,35 +64,35 @@
         // internal 4 x 4 img block 
     //==============================
 
-    .hero1--left--4x4{
+    .hero2--left--4x4{
         display: flex; 
         background-color: pink; 
         flex-wrap: wrap;
         height: 100%; 
     }
 
-    .hero1--img-1{
+    .hero2--img-1{
         display: flex;
         background-color: white; 
         flex-basis: 50%;  
         height: 50%; 
     }  
     
-    .hero1--img-2{
+    .hero2--img-2{
         display: flex;
         background-color: green; 
         flex-basis: 50%;  
         height: 50%; 
     }    
 
-    .hero1--img-3{
+    .hero2--img-3{
         display: flex;
         background-color: blue; 
         flex-basis: 50%;  
         height: 50%; 
     }    
 
-    .hero1--img-4{
+    .hero2--img-4{
         display: flex;
         background-color: red; 
         flex-basis: 50%;  
