Added Hero 1, Hero 2, Center text, Gallery block 1

--- a/_pugfiles/hero-1.pug
+++ b/_pugfiles/hero-1.pug
@@ -1,6 +1,8 @@
 
 .hero1
     .hero1--left
+        .hero1--left--img
+            img(src="../assets/img/icon-md.svg")
     .hero1--right
         .hero1--right--content
             h1.hero1--txt--h1 WE ARE BELLATR 
@@ -11,6 +13,8 @@
 
 .hero1
     .hero1--left.order-1
+        .hero1--left--img
+            img(src="../assets/img/icon-md.svg")
     .hero1--right
         .hero1--right--content
             h1.hero1--txt--h1 WE ARE BELLATR 
