--- a/_pugfiles/hero-2.pug
+++ b/_pugfiles/hero-2.pug
@@ -3,9 +3,13 @@
     .hero2--left
         .hero2--left--4x4
             .hero2--img-1
+                img(src="../assets/img/icon-md.svg")
             .hero2--img-2
+                img(src="../assets/img/icon-md.svg")
             .hero2--img-3
+                img(src="../assets/img/icon-md.svg")
             .hero2--img-4
+                img(src="../assets/img/icon-md.svg")
     .hero2--right
         .hero2--right--content
             h1.hero2--txt--h1 WE ARE BELLATR 
