--- a/assets/css/4-utility/_text.scss
+++ b/assets/css/4-utility/_text.scss
@@ -1,4 +1,6 @@
 // text align 
+
+
 .txt-l{
     text-align: left; 
 }
@@ -12,3 +14,15 @@
 }
 
 .txt-dec-none { text-decoration: none; }
+
+h1{
+    font-size: 2em;
+}
+h2{
+    font-size: 1.75em;
+}
+
+h3{
+    font-size: 1.5em;
+}
+
