--- a/assets/css/0-tools/base/_typography.scss
+++ b/assets/css/0-tools/base/_typography.scss
@@ -14,10 +14,14 @@ h6 {
   font-size: modular-scale(1);
   line-height: $heading-line-height;
   margin: 0 0 $small-spacing;
+  font-family: 'Poppins', sans-serif;
+
 }
 
 p {
   margin: 0 0 $small-spacing;
+  font-family: 'Poppins', sans-serif;
+
 }
 
 a {
