Reorganised the file structure

--- a/assets/css/3-includes/gallery/_gallery-block-1.scss
+++ b/assets/css/3-includes/gallery/_gallery-block-1.scss
@@ -1,5 +1,9 @@
 .gall-block--img{
     height: 250px;
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    border-radius: 3px;
 }
 
 // Styles for 800px and up 
