--- a/assets/css/3-includes/gallery/_gallery-dir.scss
+++ b/assets/css/3-includes/gallery/_gallery-dir.scss
@@ -2,3 +2,5 @@
 @import "_gallery-block-2"; 
 @import "_gallery-block-3"; 
 @import "_gallery-block-4";
+@import "_gallery-block-5";
+@import "_gallery-block-6";
