--- a/assets/css/3-includes/gallery/_gallery-dir.scss
+++ b/assets/css/3-includes/gallery/_gallery-dir.scss
@@ -4,3 +4,5 @@
 @import "_gallery-block-4";
 @import "_gallery-block-5";
 @import "_gallery-block-6";
+@import "_gallery-block-7";
+@import "_gallery-block-8";
