--- a/assets/css/0-tools/_normalize.scss
+++ b/assets/css/0-tools/_normalize.scss
@@ -31,6 +31,14 @@ h1{
   margin: 0px;
 }
 
+h1{margin: 0px;}
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
+
 /**
  * Add the correct display in IE 9-.
  */
